@@ -85,6 +85,7 @@ setup(name='zope.app.container',
                         'zope.app.broken',
                         'zope.copypastemove',
                         'ZODB3',
+                        'zope.i18n',
                         ],
       include_package_data = True,
       zip_safe = False,
