@@ -6,6 +6,8 @@ CHANGES
 ---------------------
 
 - fixed #238579 / #163149: error with unicode traversing
+- fixed #221025 : adding menu is sorted with translated item
+                  by using a collator (better localized sorting)
 
 3.5.3 (2007-11-09)
 ------------------
